updated the conditional rendering

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ backend/package-lock.json
 backend/package.json
 
 /backend/node_modules
+package-lock.json
+package.json
+package.json
+package-lock.json
+package.json
